5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1756_672.log
== TEST (2019-05-22 14:27:42) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

n= array(int(input([1]))
print(n)


-- ERROR:
File "XXXX", line 5
    print(n)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:28:00) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

n= array(int(input([1]))
			print(n)


-- ERROR:
File "XXXX", line 5
    print(n)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:28:37) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
x= int(input())
n= array([1])
print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:31:14) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
x= int(input())
n= array(ones[x])
print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:32:02) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
x= int(input())
n= array(ones[x, dtype=int])
print(n)


-- ERROR:
File "XXXX", line 4
    n= array(ones[x, dtype=int])
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:32:25) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
x= int(input())
n= array(ones(x, dtype=int)
print(n)


-- ERROR:
File "XXXX", line 5
    print(n)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 14:33:05) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
x= int(input())
v= array([1])
n= ones(x, dtype=int)
print(n)


-- EXECUTION TIME:
0.544349
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:34:07) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
x= int(input())
v= array([1])
n= ones(x, dtype=int)
print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:35:23) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
x= int(input())
n= ones(x, dtype=int)
print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 14:35:29) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
x= int(input())
n= ones(x, dtype=int)
print(n)


-- EXECUTION TIME:
0.388345
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:37:43) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
v1 = array([11, 22, 33])
print([0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 14:37:47) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
v1 = array([11, 22, 33])
print([0])
-- EXECUTION TIME:
0.370672
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[0]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:37:47) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
v1 = array([11, 22, 33])
print([0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:38:15) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
v1 = array([11, 22, 33])
print(v1[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 14:21:56) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
x= int(input())
n= ones(x, dtype=int)
print(n)


-- EXECUTION TIME:
0.572259
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
